adding another View MenuItem

--- a/src/main/resources/tasks.fxml
+++ b/src/main/resources/tasks.fxml
@@ -7,7 +7,6 @@
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.effect.Light.Distant?>
 <?import javafx.scene.effect.Lighting?>
 <?import javafx.scene.effect.Shadow?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -40,7 +39,8 @@
                 <Menu mnemonicParsing="false" text="View">
                   <items>
                     <MenuItem mnemonicParsing="false" text="TODO tasks" />
-                        <MenuItem mnemonicParsing="false" text="Done! tasks" />
+                        <MenuItem mnemonicParsing="false" text="In Progress" />
+                      <MenuItem mnemonicParsing="false" text="Done! tasks" />
                   </items>
                 </Menu>
               </menus>
@@ -61,9 +61,6 @@
                      <bumpInput>
                         <Shadow />
                      </bumpInput>
-                     <light>
-                        <Light.Distant />
-                     </light>
                   </Lighting>
                </effect>
             </Button>
